[gd_scene load_steps=17 format=3 uid="uid://dgto4y77lwlv6"]

[ext_resource type="Script" path="res://scripts/Robot.gd" id="1_5n33w"]
[ext_resource type="Script" path="res://scripts/movement_state.gd" id="2_7x727"]
[ext_resource type="Script" path="res://scripts/movement_controller.gd" id="4_afwf3"]
[ext_resource type="PackedScene" uid="uid://ddq84xd1kwsxh" path="res://scenes/3d_godot_robot.tscn" id="6_haw36"]
[ext_resource type="Shader" path="res://assets/color.gdshader" id="7_b7j6w"]
[ext_resource type="Texture2D" uid="uid://c1oj7adfejcly" path="res://assets/Robot/3DGodotRobot_GodotPalette.png" id="8_jnnky"]

[sub_resource type="Resource" id="Resource_opcc7"]
script = ExtResource("2_7x727")
movement_speed = 0.0
acceleration = 6.0
animation_speed = 1.0

[sub_resource type="Resource" id="Resource_xrh67"]
script = ExtResource("2_7x727")
movement_speed = 0.0
acceleration = 6.0
animation_speed = 1.0

[sub_resource type="Resource" id="Resource_5c5vl"]
script = ExtResource("2_7x727")
movement_speed = 0.0
acceleration = 6.0
animation_speed = 1.0

[sub_resource type="Resource" id="Resource_we5wy"]
script = ExtResource("2_7x727")
movement_speed = 0.0
acceleration = 6.0
animation_speed = 1.0

[sub_resource type="Resource" id="Resource_nri3o"]
script = ExtResource("2_7x727")
movement_speed = 3.0
acceleration = 7.0
animation_speed = 1.15

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dthk3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jxlq4"]
render_priority = 0
shader = ExtResource("7_b7j6w")
shader_parameter/OLDCOLORS = PackedColorArray(0.270588, 0.552941, 0.752941, 1, 0.494118, 0.670588, 0.796078, 1, 0.560784, 0.592157, 0.615686, 1, 1, 1, 1, 1)
shader_parameter/NEWCOLORS = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)
shader_parameter/texture_albedo = ExtResource("8_jnnky")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y8bu0"]
render_priority = 0
shader = ExtResource("7_b7j6w")
shader_parameter/OLDCOLORS = PackedColorArray(0.270588, 0.552941, 0.752941, 1, 0.494118, 0.670588, 0.796078, 1, 0.560784, 0.592157, 0.615686, 1, 1, 1, 1, 1)
shader_parameter/NEWCOLORS = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)
shader_parameter/texture_albedo = ExtResource("8_jnnky")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vi8qr"]
render_priority = 0
shader = ExtResource("7_b7j6w")
shader_parameter/OLDCOLORS = PackedColorArray(0.270588, 0.552941, 0.752941, 1, 0.494118, 0.670588, 0.796078, 1, 0.560784, 0.592157, 0.615686, 1, 1, 1, 1, 1)
shader_parameter/NEWCOLORS = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)
shader_parameter/texture_albedo = ExtResource("8_jnnky")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_phu66"]
render_priority = 0
shader = ExtResource("7_b7j6w")
shader_parameter/OLDCOLORS = PackedColorArray(0.270588, 0.552941, 0.752941, 1, 0.494118, 0.670588, 0.796078, 1, 0.560784, 0.592157, 0.615686, 1, 1, 1, 1, 1)
shader_parameter/NEWCOLORS = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)
shader_parameter/texture_albedo = ExtResource("8_jnnky")

[node name="RobotScene" type="Node3D"]

[node name="Robot" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 0, 0, 0)
script = ExtResource("1_5n33w")
movement_states = {
"Death": SubResource("Resource_opcc7"),
"Drop": SubResource("Resource_xrh67"),
"Idle": SubResource("Resource_5c5vl"),
"Invocation": SubResource("Resource_we5wy"),
"run": SubResource("Resource_nri3o")
}

[node name="MovementController" type="Node" parent="Robot" node_paths=PackedStringArray("robot", "mesh_root")]
script = ExtResource("4_afwf3")
robot = NodePath("..")
mesh_root = NodePath("../MeshRoot")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Robot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_dthk3")

[node name="MeshRoot" type="Node3D" parent="Robot"]

[node name="3DGodotRobot" parent="Robot/MeshRoot" instance=ExtResource("6_haw36")]

[node name="Bottom" parent="Robot/MeshRoot/3DGodotRobot/RobotArmature/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_jxlq4")

[node name="Chest" parent="Robot/MeshRoot/3DGodotRobot/RobotArmature/Skeleton3D" index="1"]
surface_material_override/0 = SubResource("ShaderMaterial_y8bu0")

[node name="Face" parent="Robot/MeshRoot/3DGodotRobot/RobotArmature/Skeleton3D" index="2"]
surface_material_override/0 = SubResource("ShaderMaterial_vi8qr")
surface_material_override/1 = SubResource("ShaderMaterial_vi8qr")

[node name="Llimbs and head" parent="Robot/MeshRoot/3DGodotRobot/RobotArmature/Skeleton3D" index="3"]
surface_material_override/0 = SubResource("ShaderMaterial_phu66")

[connection signal="set_movement_direction" from="Robot" to="Robot/MovementController" method="_on_set_movement_direction"]
[connection signal="set_movement_state" from="Robot" to="Robot/MovementController" method="_on_set_movement_state"]

[editable path="Robot/MeshRoot/3DGodotRobot"]
